add missing image alt text

--- a/caseo_exploration.html
+++ b/caseo_exploration.html
@@ -138,7 +138,11 @@ Babybel cheese the way you do a cheddar or a gouda. Day after day, month after m
 at those Babybel cheeses and wondered what an 18-month Babybel cheese would look and taste like.
 Finally, I decided there was only one way to find&nbsp;out.</p>
 <hr>
-<p><a href="https://blog.justalfred.com/images/cheese_experiment.jpg"><img alt="" src="https://blog.justalfred.com/images/cheese_experiment.jpg"></a></p>
+<p><figure>
+  <a href="https://blog.justalfred.com/images/cheese_experiment.jpg">
+    <img src="https://blog.justalfred.com/images/cheese_experiment.jpg" alt="Four Babybel cheeses marked with different ages, ranging from 0 to 18 months, looking progressively wetter and darker.">
+  </a>
+</figure></p>
 <hr>
 <p>Last week marked the 18-month anniversary of the oldest in my collection. I didn&#8217;t collect
 the cheeses with rigorous regularity, but I was satisfied in the end having a somewhat even
