--- a/concert-etiquette.html
+++ b/concert-etiquette.html
@@ -183,7 +183,11 @@ as I am still a novice programmer, but here is a peek without
 explanation at what I have found so far. I have accepted the assistance
 of a good friend with a doctorate in <span class="caps">CS</span> (<span class="caps">AI</span>) so I hope that we will have
 something fun for you&nbsp;soon!  </p>
-<p><a href="https://blog.justalfred.com/images/tritone.png"><img alt="" src="https://blog.justalfred.com/images/tritone.png"></a></p>
+<figure>
+  <a href="https://blog.justalfred.com/images/tritone.png">
+    <img src="https://blog.justalfred.com/images/tritone.png" alt="Plot titled, 'Tritone Probability by Decade'">
+  </a>
+</figure>
             </div>
             <!-- /.entry-content -->
         </article>
