--- a/discoveries-i.html
+++ b/discoveries-i.html
@@ -158,7 +158,7 @@ None will ever know us. Most will never notice. We’re only small parts of a wh
 The response is humility and the release of much&nbsp;burden.</p>
 <figure>
   <a href="https://blog.justalfred.com/images/falls.jpg">
-    <img src="https://blog.justalfred.com/images/falls.jpg" width="504">
+    <img src="https://blog.justalfred.com/images/falls.jpg" alt="Image of a series of rocky waterfalls with trees on either side." width="504">
   </a>
   <figcaption>Imagine this in an aeon&#8230;.</figcaption>
 </figure>
@@ -179,7 +179,7 @@ Proximate, purposeful emptiness is more imposing on a person than a parallel, po
 There’s a resonance here with Buddhism’s second noble&nbsp;truth.</p>
 <figure>
   <a href="https://blog.justalfred.com/images/michael_heizer.jpg">
-    <img src="https://blog.justalfred.com/images/michael_heizer.jpg" width="504">
+    <img src="https://blog.justalfred.com/images/michael_heizer.jpg" alt="Expansive gallery space with gaping holes in the ground with various geometric profiles." width="504">
   </a>
   <figcaption><a href="https://www.diaart.org/collection/collection/heizer-michael-north-east-south-west-19672002-2003-174-1-4"><i>North, East, South, West</i></a>, Michael Heizer</figcaption>
 </figure>
