--- a/present.html
+++ b/present.html
@@ -143,7 +143,11 @@ I see a faint, clouded reflection of myself. I feel like I&#8217;m here, but I&#
 Approaching <em>muga</em>. I start to detach. I want others to see this and experience&nbsp;it.</p>
 <p>And with these thoughts in mind, I made my own&nbsp;art.</p>
 <p>Self Portrait: Relinquishing My&nbsp;Self</p>
-<p><a href="https://blog.justalfred.com/images/self-portrait1.jpg"><img alt="" src="https://blog.justalfred.com/images/self-portrait1.jpg"></a></p>
+<figure>
+  <a href="https://blog.justalfred.com/images/self-portrait1.jpg">
+    <img src="https://blog.justalfred.com/images/self-portrait1.jpg" alt="Silver-toned, textured surface with a dark figure reflected in the center">
+  </a>
+<figure>
             </div>
             <!-- /.entry-content -->
         </article>
