--- a/the-acceptance-of-ambiguity.html
+++ b/the-acceptance-of-ambiguity.html
@@ -131,7 +131,11 @@ Just Alfred            </a>
 </footer><!-- /.post-info -->                    </div>
                 </div>
                 <div style="text-align:center">
-<p><img alt="" src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/17/Yin_yang.svg/240px-Yin_yang.svg.png"></p>
+<p><figure>
+  <a href="https://en.wikipedia.org/wiki/File:Yin_yang.svg">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/17/Yin_yang.svg/240px-Yin_yang.svg.png" alt="Yin-Yang symbol">
+  </a>
+<figure></p>
 </div>
 <p><a href="https://blog.justalfred.com/literary-theory.html">A little while back</a>, I tried to illustrate the value of accepting ambiguity via Emily Dickinson and Jacob Bronowski.
 Poetry and Science.
