new post: not a maker

--- a/index2.html
+++ b/index2.html
@@ -93,6 +93,13 @@ Just Alfred            </a>
     <div class="row">
         <div class="col-sm-9">
             <article>
+                <h2><a href="https://blog.justalfred.com/literary-theory.html">Literary&nbsp;Theory</a></h2>
+                <div class="summary"><p>Is to understand literature to understand&nbsp;society?</p>
+                    <a class="btn btn-default btn-xs" href="https://blog.justalfred.com/literary-theory.html">more ...</a>
+                </div>
+            </article>
+            <hr/>
+            <article>
                 <h2><a href="https://blog.justalfred.com/i-am-not-who-i-was.html">I Am Not Who I&nbsp;Was</a></h2>
                 <div class="summary"><p>We change. Sometimes radically. What does that&nbsp;mean?</p>
                     <a class="btn btn-default btn-xs" href="https://blog.justalfred.com/i-am-not-who-i-was.html">more ...</a>
@@ -152,13 +159,6 @@ Just Alfred            </a>
                 <h2><a href="https://blog.justalfred.com/you-are-an-antichrist.html">You are an&nbsp;Antichrist</a></h2>
                 <div class="summary"><p>It&#8217;s only&nbsp;logical.</p>
                     <a class="btn btn-default btn-xs" href="https://blog.justalfred.com/you-are-an-antichrist.html">more ...</a>
-                </div>
-            </article>
-            <hr/>
-            <article>
-                <h2><a href="https://blog.justalfred.com/renaissance-role-models.html">Renaissance Role&nbsp;Models</a></h2>
-                <div class="summary"><p>A model of role models from a Renaissance&nbsp;ideal.</p>
-                    <a class="btn btn-default btn-xs" href="https://blog.justalfred.com/renaissance-role-models.html">more ...</a>
                 </div>
             </article>
             <hr/>
