new post: creatin in music

--- a/authors.html
+++ b/authors.html
@@ -93,7 +93,7 @@ Just Alfred            </a>
     <div class="row">
         <div class="col-sm-9">
   <h1>Authors on Just Alfred</h1>
-        <li><a href="https://blog.justalfred.com/author/just-alfred.html">Just Alfred</a> (54)</li>
+        <li><a href="https://blog.justalfred.com/author/just-alfred.html">Just Alfred</a> (55)</li>
         </div>
         <div class="col-sm-3" id="sidebar">
             <aside>
@@ -119,7 +119,7 @@ Just Alfred            </a>
       <a href="https://blog.justalfred.com/tag/the-classical-kwontum-interface.html">The Classical-Kwontum Interface</a>
     </li>
     <li class="list-group-item tag-1">
-      <a href="https://blog.justalfred.com/tag/music.html">Music</a>
+      <a href="https://blog.justalfred.com/tag/music.html">music</a>
     </li>
     <li class="list-group-item tag-1">
       <a href="https://blog.justalfred.com/tag/humans.html">humans</a>
