--- a/making-the-world-better-without-making-a-thing.html
+++ b/making-the-world-better-without-making-a-thing.html
@@ -147,7 +147,8 @@ The latter consume decaying matter.
 That’s just as valuable, isn’t it?
 But it’s harder to appreciate the removal or avoidance of bad than the creation of good.<sup id="fnref-2"><a class="footnote-ref" href="#fn-2">2</a></sup></p>
 <p>I wonder also whether other cultures share this prejudice.
-It could be a marker of our current consumer culture that seeks pleasure in all things.<sup id="fnref-3"><a class="footnote-ref" href="#fn-3">3</a></sup></p>
+It could be a marker of our current consumer culture that seeks
+materiality, fame, and pleasure in all things.<sup id="fnref-3"><a class="footnote-ref" href="#fn-3">3</a></sup></p>
 <p>As I have Arendt on my mind, I think, if I’m reading her right, Making falls under what she calls Work.
 It results in durable products,
 but it&#8217;s distinct from Labor (like farming and cooking)
@@ -212,7 +213,7 @@ Let&#8217;s celebrate those humble acts by humble actors who don&#8217;t even kn
       <a href="https://blog.justalfred.com/tag/the-classical-kwontum-interface.html">The Classical-Kwontum Interface</a>
     </li>
     <li class="list-group-item tag-1">
-      <a href="https://blog.justalfred.com/tag/music.html">Music</a>
+      <a href="https://blog.justalfred.com/tag/music.html">music</a>
     </li>
     <li class="list-group-item tag-1">
       <a href="https://blog.justalfred.com/tag/humans.html">humans</a>
