--- a/physics-and-platonic-forms.html
+++ b/physics-and-platonic-forms.html
@@ -215,7 +215,7 @@ That&#8217;s kind of a problem.&#160;<a class="footnote-backref" href="#fnref-1"
       <a href="https://blog.justalfred.com/tag/the-classical-kwontum-interface.html">The Classical-Kwontum Interface</a>
     </li>
     <li class="list-group-item tag-1">
-      <a href="https://blog.justalfred.com/tag/music.html">Music</a>
+      <a href="https://blog.justalfred.com/tag/music.html">music</a>
     </li>
     <li class="list-group-item tag-1">
       <a href="https://blog.justalfred.com/tag/humans.html">humans</a>
