--- a/present.html
+++ b/present.html
@@ -178,7 +178,7 @@ Approaching <em>muga</em>. I start to detach. I want others to see this and expe
       <a href="https://blog.justalfred.com/tag/the-classical-kwontum-interface.html">The Classical-Kwontum Interface</a>
     </li>
     <li class="list-group-item tag-1">
-      <a href="https://blog.justalfred.com/tag/music.html">Music</a>
+      <a href="https://blog.justalfred.com/tag/music.html">music</a>
     </li>
     <li class="list-group-item tag-1">
       <a href="https://blog.justalfred.com/tag/humans.html">humans</a>
