--- a/austin-auto.html
+++ b/austin-auto.html
@@ -231,7 +231,7 @@ the&nbsp;experience.</p>
       <a href="https://blog.justalfred.com/tag/the-classical-kwontum-interface.html">The Classical-Kwontum Interface</a>
     </li>
     <li class="list-group-item tag-1">
-      <a href="https://blog.justalfred.com/tag/music.html">Music</a>
+      <a href="https://blog.justalfred.com/tag/music.html">music</a>
     </li>
     <li class="list-group-item tag-1">
       <a href="https://blog.justalfred.com/tag/humans.html">humans</a>
