--- a/index2.html
+++ b/index2.html
@@ -93,6 +93,13 @@ Just Alfred            </a>
     <div class="row">
         <div class="col-sm-9">
             <article>
+                <h2><a href="https://blog.justalfred.com/to-listen.html">To&nbsp;Listen</a></h2>
+                <div class="summary"><p>Culture in One&nbsp;Character</p>
+                    <a class="btn btn-default btn-xs" href="https://blog.justalfred.com/to-listen.html">more ...</a>
+                </div>
+            </article>
+            <hr/>
+            <article>
                 <h2><a href="https://blog.justalfred.com/literary-theory.html">Literary&nbsp;Theory</a></h2>
                 <div class="summary"><p>Is to understand literature to understand&nbsp;society?</p>
                     <a class="btn btn-default btn-xs" href="https://blog.justalfred.com/literary-theory.html">more ...</a>
@@ -155,13 +162,6 @@ Just Alfred            </a>
                 </div>
             </article>
             <hr/>
-            <article>
-                <h2><a href="https://blog.justalfred.com/you-are-an-antichrist.html">You are an&nbsp;Antichrist</a></h2>
-                <div class="summary"><p>It&#8217;s only&nbsp;logical.</p>
-                    <a class="btn btn-default btn-xs" href="https://blog.justalfred.com/you-are-an-antichrist.html">more ...</a>
-                </div>
-            </article>
-            <hr/>
 
         <ul class="pagination">
                 <li class="prev"><a href="https://blog.justalfred.com/index.html">&laquo;</a>
@@ -206,7 +206,7 @@ Just Alfred            </a>
       <a href="https://blog.justalfred.com/tag/the-classical-kwontum-interface.html">The Classical-Kwontum Interface</a>
     </li>
     <li class="list-group-item tag-1">
-      <a href="https://blog.justalfred.com/tag/music.html">Music</a>
+      <a href="https://blog.justalfred.com/tag/music.html">music</a>
     </li>
     <li class="list-group-item tag-1">
       <a href="https://blog.justalfred.com/tag/humans.html">humans</a>
