--- a/pages/about-the-site.html
+++ b/pages/about-the-site.html
@@ -138,7 +138,7 @@ If you&#8217;d like to respond to anything I write, email me at:
       <a href="https://blog.justalfred.com/tag/the-classical-kwontum-interface.html">The Classical-Kwontum Interface</a>
     </li>
     <li class="list-group-item tag-1">
-      <a href="https://blog.justalfred.com/tag/music.html">Music</a>
+      <a href="https://blog.justalfred.com/tag/music.html">music</a>
     </li>
     <li class="list-group-item tag-1">
       <a href="https://blog.justalfred.com/tag/humans.html">humans</a>
