--- a/poetry-and-poetics.html
+++ b/poetry-and-poetics.html
@@ -211,7 +211,7 @@ I&#8217;ll drink poems instead. Hail, fluid Lyrics, Odes!<br></p>
       <a href="https://blog.justalfred.com/tag/the-classical-kwontum-interface.html">The Classical-Kwontum Interface</a>
     </li>
     <li class="list-group-item tag-1">
-      <a href="https://blog.justalfred.com/tag/music.html">Music</a>
+      <a href="https://blog.justalfred.com/tag/music.html">music</a>
     </li>
     <li class="list-group-item tag-1">
       <a href="https://blog.justalfred.com/tag/humans.html">humans</a>
