--- a/quicklink-2.html
+++ b/quicklink-2.html
@@ -187,7 +187,7 @@ need to be making better progress on my other&nbsp;endeavor&#8230;.</p>
       <a href="https://blog.justalfred.com/tag/the-classical-kwontum-interface.html">The Classical-Kwontum Interface</a>
     </li>
     <li class="list-group-item tag-1">
-      <a href="https://blog.justalfred.com/tag/music.html">Music</a>
+      <a href="https://blog.justalfred.com/tag/music.html">music</a>
     </li>
     <li class="list-group-item tag-1">
       <a href="https://blog.justalfred.com/tag/humans.html">humans</a>
