--- a/the-acceptance-of-ambiguity.html
+++ b/the-acceptance-of-ambiguity.html
@@ -298,7 +298,7 @@ But what is that point? See Popper and the paradox of tolerance.&#160;<a class="
       <a href="https://blog.justalfred.com/tag/the-classical-kwontum-interface.html">The Classical-Kwontum Interface</a>
     </li>
     <li class="list-group-item tag-1">
-      <a href="https://blog.justalfred.com/tag/music.html">Music</a>
+      <a href="https://blog.justalfred.com/tag/music.html">music</a>
     </li>
     <li class="list-group-item tag-1">
       <a href="https://blog.justalfred.com/tag/humans.html">humans</a>
