--- a/the-role-and-importance-of-curiosity-in-data-science.html
+++ b/the-role-and-importance-of-curiosity-in-data-science.html
@@ -301,7 +301,7 @@ In the end, it comes back to the hardest skill to learn in data science: asking 
       <a href="https://blog.justalfred.com/tag/the-classical-kwontum-interface.html">The Classical-Kwontum Interface</a>
     </li>
     <li class="list-group-item tag-1">
-      <a href="https://blog.justalfred.com/tag/music.html">Music</a>
+      <a href="https://blog.justalfred.com/tag/music.html">music</a>
     </li>
     <li class="list-group-item tag-1">
       <a href="https://blog.justalfred.com/tag/humans.html">humans</a>
