--- a/pygotham-2016.html
+++ b/pygotham-2016.html
@@ -62,8 +62,8 @@ Just Alfred            </a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
-                         <li><a href="https://blog.justalfred.com/pages/about-the-site.html">
-                             About the&nbsp;Site
+                         <li><a href="https://blog.justalfred.com/pages/about-the-author.html">
+                             About the&nbsp;Author
                           </a></li>
                         <li class="active">
                             <a href="https://blog.justalfred.com/category/code.html">Code</a>
