highlight link away

--- a/affirmations.html
+++ b/affirmations.html
@@ -152,7 +152,7 @@ So I set up a list of dyads and trimmed the list down to major ones that mostly 
 I was down to three pairs plus one trait that sat on its own.
 Finally, I noticed that there were still strong relationships between many of the traits,
 and that these had a&nbsp;pattern.</p>
-<p><strong><a href="https://blog.justalfred.com/html/affirmations.html">The result</a></strong> was quite useful for a few months,
+<p><strong>The result (<a href="https://blog.justalfred.com/html/affirmations.html">click here to see it</a>)</strong> was quite useful for a few months,
 but I’ve since largely neglected them.
 So I decided to digitize them to bring them again into the fore of my attention.
 I expect that as I engage with these principles more,
