--- a/pages/about-the-author.html
+++ b/pages/about-the-author.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" prefix="og: http://ogp.me/ns# fb: https://www.facebook.com/2008/fbml">
 <head>
-    <title>About the&nbsp;Author - Just Alfred</title>
+    <title>About the Author - Just Alfred</title>
     <!-- Using the latest rendering mode for IE -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset="utf-8">
