--- a/wandering-thoughts-about-artificial-intelligence.html
+++ b/wandering-thoughts-about-artificial-intelligence.html
@@ -576,7 +576,7 @@ That doesn’t make&nbsp;sense.</p>
 - Oh, I’m sorry, dear.
 What were we talking about before?
 </samp></p>
-<p>~ You know better than I do….
+<p>~ You know better than I do&#8230;.
 Right, I was trying to remember the name of the bartender from last week,
 and we got as far as trying to remember the name of the restaurant,
 and you inexplicably gave me Lunch Rush.
