--- a/guido.html
+++ b/guido.html
@@ -152,7 +152,7 @@ step up from there is <em>mi</em>, a half-step up from there is <em>fa</em>, and
 on. If the key is C-major, <em>do-re-mi-fa</em> is <span class="caps">CDEF</span>. If it&#8217;s D-major, it&#8217;s
 <span class="caps">DEF</span>#G.</p>
 <p>It gets worse. In a minor scale, <em>do-re-mi-fa-sol-la-ti-do</em> becomes
-<em>do-re-<strong>me</strong>-fa-sol-<strong>le</strong>-<strong>te</strong>-do</em>. In order to read a line and get
+<em>do-re-</em><em>me</em><em>-fa-sol-</em><em>le</em><em>-</em><em>te</em><em>-do</em>. In order to read a line and get
 the solfège right, one has to keep track of the particular key and mode.
 These often change in the middle of a piece. People who can sing solfège
 in real time freak me&nbsp;out.  </p>
@@ -253,7 +253,7 @@ assigned to those notes. Convenient. Thanks,&nbsp;Guido.</p>
    <div class="container">
       <hr>
       <div class="row">
-         <div class="col-xs-10">&copy; 2019 Just Alfred
+         <div class="col-xs-10">&copy; 2020 Just Alfred
             &middot; Powered by <a href="https://github.com/getpelican/pelican-themes/tree/master/pelican-bootstrap3" target="_blank">pelican-bootstrap3</a>,
             <a href="http://docs.getpelican.com/" target="_blank">Pelican</a>,
             <a href="http://getbootstrap.com" target="_blank">Bootstrap</a>         </div>
