--- a/making-the-world-better-without-making-a-thing.html
+++ b/making-the-world-better-without-making-a-thing.html
@@ -138,15 +138,15 @@ I prefer to spend the rest of my time supporting my friends and family and readi
 As with Chachra, this is not to demean Making as an activity, but to recognize the value of the alternatives.
 I&#8217;m done feeling inferior because I don&#8217;t generally like putting more stuff out into the&nbsp;world.</p>
 <p>I wonder if our prejudice towards Makers even extends to how we view nature.
-Culturally, we love bees and spiders.<sup id="fnref-1"><a class="footnote-ref" href="#fn-1">1</a></sup>
+Culturally, we love bees and spiders.<sup id="fnref:1"><a class="footnote-ref" href="#fn:1">1</a></sup>
 We hate roaches and flies.
 The former group makes honey and webs.
 The latter consume decaying matter.
 That’s just as valuable, isn’t it?
-But it’s harder to appreciate the removal or avoidance of bad than the creation of good.<sup id="fnref-2"><a class="footnote-ref" href="#fn-2">2</a></sup></p>
+But it’s harder to appreciate the removal or avoidance of bad than the creation of good.<sup id="fnref:2"><a class="footnote-ref" href="#fn:2">2</a></sup></p>
 <p>I wonder also whether other cultures share this prejudice.
 It could be a marker of our current consumer culture that seeks
-materiality, fame, and pleasure in all things.<sup id="fnref-3"><a class="footnote-ref" href="#fn-3">3</a></sup></p>
+materiality, fame, and pleasure in all things.<sup id="fnref:3"><a class="footnote-ref" href="#fn:3">3</a></sup></p>
 <p>As I have Arendt on my mind, I think, if I’m reading her right, Making falls under what she calls Work.
 It results in durable products,
 but it&#8217;s distinct from Labor (like farming and cooking)
@@ -163,21 +163,21 @@ Let&#8217;s celebrate those humble acts by humble actors who don&#8217;t even kn
 <div class="footnote">
 <hr>
 <ol>
-<li id="fn-1">
-<p><span class="caps">OK</span>, maybe not all of us and not all spiders, but Charlotte&#8217;s Web counts for something, no?&#160;<a class="footnote-backref" href="#fnref-1" title="Jump back to footnote 1 in the text">&#8617;</a></p>
+<li id="fn:1">
+<p><span class="caps">OK</span>, maybe not all of us and not all spiders, but Charlotte&#8217;s Web counts for something, no?&#160;<a class="footnote-backref" href="#fnref:1" title="Jump back to footnote 1 in the text">&#8617;</a></p>
 </li>
-<li id="fn-2">
+<li id="fn:2">
 <p>Thought experiment: if roaches ate bedbugs, the most reviled members of the class Insecta,
-  would we like them more?&#160;<a class="footnote-backref" href="#fnref-2" title="Jump back to footnote 2 in the text">&#8617;</a></p>
+  would we like them more?&#160;<a class="footnote-backref" href="#fnref:2" title="Jump back to footnote 2 in the text">&#8617;</a></p>
 </li>
-<li id="fn-3">
+<li id="fn:3">
 <p>Aspersions on the man who popularized the principle of delighting users.
   Delight saps our attention and doesn’t belong with tools.
   Show me a delightful hammer or screwdriver.
   Show me a delightful microwave.
   Any delight should come from achieving the goal that the tool assists.
   It should not be a feature to bring users back to the tool without a goal.
-  That form of delight is addiction and harms us.&#160;<a class="footnote-backref" href="#fnref-3" title="Jump back to footnote 3 in the text">&#8617;</a></p>
+  That form of delight is addiction and harms us.&#160;<a class="footnote-backref" href="#fnref:3" title="Jump back to footnote 3 in the text">&#8617;</a></p>
 </li>
 </ol>
 </div>
@@ -263,7 +263,7 @@ Let&#8217;s celebrate those humble acts by humble actors who don&#8217;t even kn
    <div class="container">
       <hr>
       <div class="row">
-         <div class="col-xs-10">&copy; 2019 Just Alfred
+         <div class="col-xs-10">&copy; 2020 Just Alfred
             &middot; Powered by <a href="https://github.com/getpelican/pelican-themes/tree/master/pelican-bootstrap3" target="_blank">pelican-bootstrap3</a>,
             <a href="http://docs.getpelican.com/" target="_blank">Pelican</a>,
             <a href="http://getbootstrap.com" target="_blank">Bootstrap</a>         </div>
