--- a/physics-and-platonic-forms.html
+++ b/physics-and-platonic-forms.html
@@ -141,8 +141,8 @@ Listen to physicists sometime.
 &#8220;We&#8217;ve found the Higgs boson.&#8221;
 As if there were only one of these particles.
 Curious, isn&#8217;t&nbsp;it?</p>
-<p>In the <a href="https://en.wikipedia.org/wiki/Standard_Model">standard model</a> of particle physics<sup id="fnref-1"><a class="footnote-ref" href="#fn-1">1</a></sup>,
-there are six quarks, six leptons, and a few bosons.<sup id="fnref-2"><a class="footnote-ref" href="#fn-2">2</a></sup>
+<p>In the <a href="https://en.wikipedia.org/wiki/Standard_Model">standard model</a> of particle physics<sup id="fnref:1"><a class="footnote-ref" href="#fn:1">1</a></sup>,
+there are six quarks, six leptons, and a few bosons.<sup id="fnref:2"><a class="footnote-ref" href="#fn:2">2</a></sup>
 These are understood as classifications where the universe contains vast numbers of each.
 We have no problems allowing that each electron is exactly the same as every other electron.
 Here, we can grant, no, we <em>must</em> grant,
@@ -171,15 +171,15 @@ You can&#8217;t get more pure than pure&nbsp;Forms.</p>
 <div class="footnote">
 <hr>
 <ol>
-<li id="fn-1">
+<li id="fn:1">
 <p>The standard model looks clean and elegant as a table, but the
 <a href="https://www.symmetrymagazine.org/article/the-deconstructed-standard-model-equation">equation that expresses this is anything but</a>.
 We also know it&#8217;s wrong.
 But it sure makes really good predictions.
-That&#8217;s kind of a problem.&#160;<a class="footnote-backref" href="#fnref-1" title="Jump back to footnote 1 in the text">&#8617;</a></p>
+That&#8217;s kind of a problem.&#160;<a class="footnote-backref" href="#fnref:1" title="Jump back to footnote 1 in the text">&#8617;</a></p>
 </li>
-<li id="fn-2">
-<p>Six. Why six? I reject any spiritual or numerological appeals, but I&#8217;m going to come back to this number soon.&#160;<a class="footnote-backref" href="#fnref-2" title="Jump back to footnote 2 in the text">&#8617;</a></p>
+<li id="fn:2">
+<p>Six. Why six? I reject any spiritual or numerological appeals, but I&#8217;m going to come back to this number soon.&#160;<a class="footnote-backref" href="#fnref:2" title="Jump back to footnote 2 in the text">&#8617;</a></p>
 </li>
 </ol>
 </div>
@@ -265,7 +265,7 @@ That&#8217;s kind of a problem.&#160;<a class="footnote-backref" href="#fnref-1"
    <div class="container">
       <hr>
       <div class="row">
-         <div class="col-xs-10">&copy; 2019 Just Alfred
+         <div class="col-xs-10">&copy; 2020 Just Alfred
             &middot; Powered by <a href="https://github.com/getpelican/pelican-themes/tree/master/pelican-bootstrap3" target="_blank">pelican-bootstrap3</a>,
             <a href="http://docs.getpelican.com/" target="_blank">Pelican</a>,
             <a href="http://getbootstrap.com" target="_blank">Bootstrap</a>         </div>
