--- a/affirmations.html
+++ b/affirmations.html
@@ -21,7 +21,7 @@
         <meta property="og:url" content="https://blog.justalfred.com/affirmations.html"/>
         <meta property="og:description" content="A structured visualization of the person I strive to be."/>
         <meta property="article:published_time" content="2019-08-11" />
-            <meta property="article:section" content="humans" />
+            <meta property="article:section" content="posts" />
             <meta property="article:tag" content="humans" />
             <meta property="article:tag" content="code" />
             <meta property="article:author" content="Just Alfred" />
@@ -64,23 +64,8 @@ Just Alfred            </a>
                          <li><a href="https://blog.justalfred.com/pages/about-the-author.html">
                              About the&nbsp;Author
                           </a></li>
-                        <li >
-                            <a href="https://blog.justalfred.com/category/code.html">Code</a>
-                        </li>
                         <li class="active">
-                            <a href="https://blog.justalfred.com/category/humans.html">Humans</a>
-                        </li>
-                        <li >
-                            <a href="https://blog.justalfred.com/category/literature.html">Literature</a>
-                        </li>
-                        <li >
-                            <a href="https://blog.justalfred.com/category/misc.html">Misc</a>
-                        </li>
-                        <li >
-                            <a href="https://blog.justalfred.com/category/music.html">Music</a>
-                        </li>
-                        <li >
-                            <a href="https://blog.justalfred.com/category/science.html">Science</a>
+                            <a href="https://blog.justalfred.com/category/posts.html">Posts</a>
                         </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
