--- a/hypotheses-part-1.html
+++ b/hypotheses-part-1.html
@@ -21,7 +21,7 @@
         <meta property="og:url" content="https://blog.justalfred.com/hypotheses-part-1.html"/>
         <meta property="og:description" content="Originally published at: http://kwontum.blogspot.com/2013/07/hypotheses-part-1.html I’m going to try again to focus on short-form publishing here. I’m starting yet another series of posts called “Hypotheses”. I am well known as having random ideas float through my head. Some of these are ideas …"/>
         <meta property="article:published_time" content="2013-07-27" />
-            <meta property="article:section" content="science" />
+            <meta property="article:section" content="posts" />
             <meta property="article:tag" content="The Classical-Kwontum Interface" />
             <meta property="article:tag" content="Science" />
             <meta property="article:author" content="Just Alfred" />
@@ -64,23 +64,8 @@ Just Alfred            </a>
                          <li><a href="https://blog.justalfred.com/pages/about-the-author.html">
                              About the&nbsp;Author
                           </a></li>
-                        <li >
-                            <a href="https://blog.justalfred.com/category/code.html">Code</a>
-                        </li>
-                        <li >
-                            <a href="https://blog.justalfred.com/category/humans.html">Humans</a>
-                        </li>
-                        <li >
-                            <a href="https://blog.justalfred.com/category/literature.html">Literature</a>
-                        </li>
-                        <li >
-                            <a href="https://blog.justalfred.com/category/misc.html">Misc</a>
-                        </li>
-                        <li >
-                            <a href="https://blog.justalfred.com/category/music.html">Music</a>
-                        </li>
                         <li class="active">
-                            <a href="https://blog.justalfred.com/category/science.html">Science</a>
+                            <a href="https://blog.justalfred.com/category/posts.html">Posts</a>
                         </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
