--- a/caseo_exploration.html
+++ b/caseo_exploration.html
@@ -20,7 +20,7 @@
         <meta property="og:url" content="https://blog.justalfred.com/caseo_exploration.html"/>
         <meta property="og:description" content="Boundless curiosity and logical models"/>
         <meta property="article:published_time" content="2016-02-13" />
-            <meta property="article:section" content="humans" />
+            <meta property="article:section" content="posts" />
             <meta property="article:author" content="Just Alfred" />
 
     <meta name="twitter:dnt" content="on">
@@ -61,23 +61,8 @@ Just Alfred            </a>
                          <li><a href="https://blog.justalfred.com/pages/about-the-author.html">
                              About the&nbsp;Author
                           </a></li>
-                        <li >
-                            <a href="https://blog.justalfred.com/category/code.html">Code</a>
-                        </li>
                         <li class="active">
-                            <a href="https://blog.justalfred.com/category/humans.html">Humans</a>
-                        </li>
-                        <li >
-                            <a href="https://blog.justalfred.com/category/literature.html">Literature</a>
-                        </li>
-                        <li >
-                            <a href="https://blog.justalfred.com/category/misc.html">Misc</a>
-                        </li>
-                        <li >
-                            <a href="https://blog.justalfred.com/category/music.html">Music</a>
-                        </li>
-                        <li >
-                            <a href="https://blog.justalfred.com/category/science.html">Science</a>
+                            <a href="https://blog.justalfred.com/category/posts.html">Posts</a>
                         </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
