--- a/christmas-post.html
+++ b/christmas-post.html
@@ -21,7 +21,7 @@
         <meta property="og:url" content="https://blog.justalfred.com/christmas-post.html"/>
         <meta property="og:description" content="Originally published at: http://kwontum.blogspot.com/2010/12/None.html It’s Christmas, I’m on vacation, so here’s a short post for you to enjoy. First, I want to point out a couple articles that tickled my fancy. The first is a story about a flash-mob gone …"/>
         <meta property="article:published_time" content="2010-12-25" />
-            <meta property="article:section" content="music" />
+            <meta property="article:section" content="posts" />
             <meta property="article:tag" content="The Classical-Kwontum Interface" />
             <meta property="article:tag" content="Music" />
             <meta property="article:author" content="Just Alfred" />
@@ -64,23 +64,8 @@ Just Alfred            </a>
                          <li><a href="https://blog.justalfred.com/pages/about-the-author.html">
                              About the&nbsp;Author
                           </a></li>
-                        <li >
-                            <a href="https://blog.justalfred.com/category/code.html">Code</a>
-                        </li>
-                        <li >
-                            <a href="https://blog.justalfred.com/category/humans.html">Humans</a>
-                        </li>
-                        <li >
-                            <a href="https://blog.justalfred.com/category/literature.html">Literature</a>
-                        </li>
-                        <li >
-                            <a href="https://blog.justalfred.com/category/misc.html">Misc</a>
-                        </li>
                         <li class="active">
-                            <a href="https://blog.justalfred.com/category/music.html">Music</a>
-                        </li>
-                        <li >
-                            <a href="https://blog.justalfred.com/category/science.html">Science</a>
+                            <a href="https://blog.justalfred.com/category/posts.html">Posts</a>
                         </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
