--- a/does-not-compute.html
+++ b/does-not-compute.html
@@ -21,7 +21,7 @@
         <meta property="og:url" content="https://blog.justalfred.com/does-not-compute.html"/>
         <meta property="og:description" content="Originally published at: http://kwontum.blogspot.com/2013/10/does-not-compute.html Let’s talk about language. How amazing is it that using sounds or symbols, we can implant in another person’s mind an entirely new state? We can describe a place that person has never seen, we can construct …"/>
         <meta property="article:published_time" content="2013-10-04" />
-            <meta property="article:section" content="code" />
+            <meta property="article:section" content="posts" />
             <meta property="article:tag" content="The Classical-Kwontum Interface" />
             <meta property="article:tag" content="Code" />
             <meta property="article:author" content="Just Alfred" />
@@ -65,22 +65,7 @@ Just Alfred            </a>
                              About the&nbsp;Author
                           </a></li>
                         <li class="active">
-                            <a href="https://blog.justalfred.com/category/code.html">Code</a>
-                        </li>
-                        <li >
-                            <a href="https://blog.justalfred.com/category/humans.html">Humans</a>
-                        </li>
-                        <li >
-                            <a href="https://blog.justalfred.com/category/literature.html">Literature</a>
-                        </li>
-                        <li >
-                            <a href="https://blog.justalfred.com/category/misc.html">Misc</a>
-                        </li>
-                        <li >
-                            <a href="https://blog.justalfred.com/category/music.html">Music</a>
-                        </li>
-                        <li >
-                            <a href="https://blog.justalfred.com/category/science.html">Science</a>
+                            <a href="https://blog.justalfred.com/category/posts.html">Posts</a>
                         </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
