--- a/getting-started-with-pelican-on-github-pages.html
+++ b/getting-started-with-pelican-on-github-pages.html
@@ -21,7 +21,7 @@
         <meta property="og:url" content="https://blog.justalfred.com/getting-started-with-pelican-on-github-pages.html"/>
         <meta property="og:description" content="How I got this site started"/>
         <meta property="article:published_time" content="2018-06-09" />
-            <meta property="article:section" content="code" />
+            <meta property="article:section" content="posts" />
             <meta property="article:tag" content="Code" />
             <meta property="article:author" content="Just Alfred" />
 
@@ -64,22 +64,7 @@ Just Alfred            </a>
                              About the&nbsp;Author
                           </a></li>
                         <li class="active">
-                            <a href="https://blog.justalfred.com/category/code.html">Code</a>
-                        </li>
-                        <li >
-                            <a href="https://blog.justalfred.com/category/humans.html">Humans</a>
-                        </li>
-                        <li >
-                            <a href="https://blog.justalfred.com/category/literature.html">Literature</a>
-                        </li>
-                        <li >
-                            <a href="https://blog.justalfred.com/category/misc.html">Misc</a>
-                        </li>
-                        <li >
-                            <a href="https://blog.justalfred.com/category/music.html">Music</a>
-                        </li>
-                        <li >
-                            <a href="https://blog.justalfred.com/category/science.html">Science</a>
+                            <a href="https://blog.justalfred.com/category/posts.html">Posts</a>
                         </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
