--- a/introduction.html
+++ b/introduction.html
@@ -21,7 +21,7 @@
         <meta property="og:url" content="https://blog.justalfred.com/introduction.html"/>
         <meta property="og:description" content="Welcome to my new blog."/>
         <meta property="article:published_time" content="2015-01-02" />
-            <meta property="article:section" content="misc" />
+            <meta property="article:section" content="posts" />
             <meta property="article:tag" content="info" />
             <meta property="article:author" content="Just Alfred" />
 
@@ -63,23 +63,8 @@ Just Alfred            </a>
                          <li><a href="https://blog.justalfred.com/pages/about-the-author.html">
                              About the&nbsp;Author
                           </a></li>
-                        <li >
-                            <a href="https://blog.justalfred.com/category/code.html">Code</a>
-                        </li>
-                        <li >
-                            <a href="https://blog.justalfred.com/category/humans.html">Humans</a>
-                        </li>
-                        <li >
-                            <a href="https://blog.justalfred.com/category/literature.html">Literature</a>
-                        </li>
                         <li class="active">
-                            <a href="https://blog.justalfred.com/category/misc.html">Misc</a>
-                        </li>
-                        <li >
-                            <a href="https://blog.justalfred.com/category/music.html">Music</a>
-                        </li>
-                        <li >
-                            <a href="https://blog.justalfred.com/category/science.html">Science</a>
+                            <a href="https://blog.justalfred.com/category/posts.html">Posts</a>
                         </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
