--- a/nobels.html
+++ b/nobels.html
@@ -21,7 +21,7 @@
         <meta property="og:url" content="https://blog.justalfred.com/nobels.html"/>
         <meta property="og:description" content="Originally published at: http://kwontum.blogspot.com/2013/09/nobels.html You know what’s cooler than winning a Nobel Prize? Winning two Nobel Prizes. How many people have done this since the first award in 1901? Four. Would you believe that the first was a woman? Madame Marie Skłodowska-Curie …"/>
         <meta property="article:published_time" content="2013-09-08" />
-            <meta property="article:section" content="science" />
+            <meta property="article:section" content="posts" />
             <meta property="article:tag" content="The Classical-Kwontum Interface" />
             <meta property="article:tag" content="Science" />
             <meta property="article:tag" content="Humans" />
@@ -65,23 +65,8 @@ Just Alfred            </a>
                          <li><a href="https://blog.justalfred.com/pages/about-the-author.html">
                              About the&nbsp;Author
                           </a></li>
-                        <li >
-                            <a href="https://blog.justalfred.com/category/code.html">Code</a>
-                        </li>
-                        <li >
-                            <a href="https://blog.justalfred.com/category/humans.html">Humans</a>
-                        </li>
-                        <li >
-                            <a href="https://blog.justalfred.com/category/literature.html">Literature</a>
-                        </li>
-                        <li >
-                            <a href="https://blog.justalfred.com/category/misc.html">Misc</a>
-                        </li>
-                        <li >
-                            <a href="https://blog.justalfred.com/category/music.html">Music</a>
-                        </li>
                         <li class="active">
-                            <a href="https://blog.justalfred.com/category/science.html">Science</a>
+                            <a href="https://blog.justalfred.com/category/posts.html">Posts</a>
                         </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
