--- a/renaissance.html
+++ b/renaissance.html
@@ -21,7 +21,7 @@
         <meta property="og:url" content="https://blog.justalfred.com/renaissance.html"/>
         <meta property="og:description" content="Originally published at: http://kwontum.blogspot.com/2013/02/None.html I don’t think I have to remind my readers what renaissance means, but that is what is going on here. It has been well over a year since my last post, and much has changed. For one, I …"/>
         <meta property="article:published_time" content="2013-02-11" />
-            <meta property="article:section" content="misc" />
+            <meta property="article:section" content="posts" />
             <meta property="article:tag" content="The Classical-Kwontum Interface" />
             <meta property="article:tag" content="Music" />
             <meta property="article:tag" content="info" />
@@ -65,23 +65,8 @@ Just Alfred            </a>
                          <li><a href="https://blog.justalfred.com/pages/about-the-author.html">
                              About the&nbsp;Author
                           </a></li>
-                        <li >
-                            <a href="https://blog.justalfred.com/category/code.html">Code</a>
-                        </li>
-                        <li >
-                            <a href="https://blog.justalfred.com/category/humans.html">Humans</a>
-                        </li>
-                        <li >
-                            <a href="https://blog.justalfred.com/category/literature.html">Literature</a>
-                        </li>
                         <li class="active">
-                            <a href="https://blog.justalfred.com/category/misc.html">Misc</a>
-                        </li>
-                        <li >
-                            <a href="https://blog.justalfred.com/category/music.html">Music</a>
-                        </li>
-                        <li >
-                            <a href="https://blog.justalfred.com/category/science.html">Science</a>
+                            <a href="https://blog.justalfred.com/category/posts.html">Posts</a>
                         </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
