--- a/the-peoples-house.html
+++ b/the-peoples-house.html
@@ -21,7 +21,7 @@
         <meta property="og:url" content="https://blog.justalfred.com/the-peoples-house.html"/>
         <meta property="og:description" content="Originally published at: http://kwontum.blogspot.com/2011/10/None.html Considering that one’s social graph is not uniformly distributed among the general population, but rather concentrated around a small number of highly-connected nodes, I think it is fairly safe to say that 100% of my readers fall in …"/>
         <meta property="article:published_time" content="2011-10-19" />
-            <meta property="article:section" content="music" />
+            <meta property="article:section" content="posts" />
             <meta property="article:tag" content="The Classical-Kwontum Interface" />
             <meta property="article:tag" content="Music" />
             <meta property="article:author" content="Just Alfred" />
@@ -64,23 +64,8 @@ Just Alfred            </a>
                          <li><a href="https://blog.justalfred.com/pages/about-the-author.html">
                              About the&nbsp;Author
                           </a></li>
-                        <li >
-                            <a href="https://blog.justalfred.com/category/code.html">Code</a>
-                        </li>
-                        <li >
-                            <a href="https://blog.justalfred.com/category/humans.html">Humans</a>
-                        </li>
-                        <li >
-                            <a href="https://blog.justalfred.com/category/literature.html">Literature</a>
-                        </li>
-                        <li >
-                            <a href="https://blog.justalfred.com/category/misc.html">Misc</a>
-                        </li>
                         <li class="active">
-                            <a href="https://blog.justalfred.com/category/music.html">Music</a>
-                        </li>
-                        <li >
-                            <a href="https://blog.justalfred.com/category/science.html">Science</a>
+                            <a href="https://blog.justalfred.com/category/posts.html">Posts</a>
                         </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
