fix relative sidebar links

--- a/hannah-arendt-violence-happiness-and-freedom.html
+++ b/hannah-arendt-violence-happiness-and-freedom.html
@@ -244,10 +244,10 @@ they are reliable sources of&nbsp;happiness.</p>
   <h4><i class="fa fa-external-link-square fa-lg"></i><span class="icon-label">Links</span></h4>
   <ul class="list-group" id="links">
     <li class="list-group-item">
-      <a href="archives.html" target="_blank">Archives</a>
+      <a href="/archives.html" target="_blank">Archives</a>
     </li>
     <li class="list-group-item">
-      <a href="feeds/all.rss.xml" target="_blank">RSS feed</a>
+      <a href="/feeds/all.rss.xml" target="_blank">RSS feed</a>
     </li>
   </ul>
 </li>
