--- a/the-role-and-importance-of-curiosity-in-data-science.html
+++ b/the-role-and-importance-of-curiosity-in-data-science.html
@@ -305,10 +305,10 @@ In the end, it comes back to the hardest skill to learn in data science: asking 
   <h4><i class="fa fa-external-link-square fa-lg"></i><span class="icon-label">Links</span></h4>
   <ul class="list-group" id="links">
     <li class="list-group-item">
-      <a href="archives.html" target="_blank">Archives</a>
+      <a href="/archives.html" target="_blank">Archives</a>
     </li>
     <li class="list-group-item">
-      <a href="feeds/all.rss.xml" target="_blank">RSS feed</a>
+      <a href="/feeds/all.rss.xml" target="_blank">RSS feed</a>
     </li>
   </ul>
 </li>
