--- a/making-the-world-better-without-making-a-thing.html
+++ b/making-the-world-better-without-making-a-thing.html
@@ -220,10 +220,10 @@ Let&#8217;s celebrate those humble acts by humble actors who don&#8217;t even kn
   <h4><i class="fa fa-external-link-square fa-lg"></i><span class="icon-label">Links</span></h4>
   <ul class="list-group" id="links">
     <li class="list-group-item">
-      <a href="archives.html" target="_blank">Archives</a>
+      <a href="/archives.html" target="_blank">Archives</a>
     </li>
     <li class="list-group-item">
-      <a href="feeds/all.rss.xml" target="_blank">RSS feed</a>
+      <a href="/feeds/all.rss.xml" target="_blank">RSS feed</a>
     </li>
   </ul>
 </li>
