--- a/the-acceptance-of-ambiguity.html
+++ b/the-acceptance-of-ambiguity.html
@@ -304,10 +304,10 @@ But what is that point? See Popper and the paradox of tolerance.&#160;<a class="
   <h4><i class="fa fa-external-link-square fa-lg"></i><span class="icon-label">Links</span></h4>
   <ul class="list-group" id="links">
     <li class="list-group-item">
-      <a href="archives.html" target="_blank">Archives</a>
+      <a href="/archives.html" target="_blank">Archives</a>
     </li>
     <li class="list-group-item">
-      <a href="feeds/all.rss.xml" target="_blank">RSS feed</a>
+      <a href="/feeds/all.rss.xml" target="_blank">RSS feed</a>
     </li>
   </ul>
 </li>
