--- a/the-art-of-loving-in-2020.html
+++ b/the-art-of-loving-in-2020.html
@@ -299,10 +299,10 @@ If enough of us learn to Love just a little better, we might change the&nbsp;wor
   <h4><i class="fa fa-external-link-square fa-lg"></i><span class="icon-label">Links</span></h4>
   <ul class="list-group" id="links">
     <li class="list-group-item">
-      <a href="archives.html" target="_blank">Archives</a>
+      <a href="/archives.html" target="_blank">Archives</a>
     </li>
     <li class="list-group-item">
-      <a href="feeds/all.rss.xml" target="_blank">RSS feed</a>
+      <a href="/feeds/all.rss.xml" target="_blank">RSS feed</a>
     </li>
   </ul>
 </li>
