--- a/the-role-and-importance-of-curiosity-in-data-science.html
+++ b/the-role-and-importance-of-curiosity-in-data-science.html
@@ -160,7 +160,7 @@ Experience with art can inform how one presents data via argument, user interfac
 You may find Agnes Martin, Josef Albers, or Mark Rothko confounding,
 but someone moved by them will probably use color and line especially effectively in their visual&nbsp;storytelling.</p>
 <div style="text-align:center">
-<p><figure>
+<figure>
   <a href="https://www.flickr.com/photos/jkannenberg/3538952506/in/photostream/">
     <img src="https://farm3.staticflickr.com/2266/3538952506_0a828273ba_z_d.jpg" alt="Detail of a work by Martin showing regular, rectilinear pencil lines" width="400" height="300">
   </a>
@@ -168,7 +168,7 @@ but someone moved by them will probably use color and line especially effectivel
     <img src="https://upload.wikimedia.org/wikipedia/en/2/20/Josef_Albers%27s_painting_%27Homage_to_the_Square%27%2C_1965.jpg" alt="A painting by Albers with stark, nested squares of slightly different colors" width="300" height="300">
   </a>
   <figcaption>Martin, left. Alberts, right. If these intrigue you, you just might be a whiz at data viz.</figcaption>
-</figure></p>
+</figure>
 </div>
 <p>I would love to work with someone experienced in theater acting.
 I have a feeling that someone practiced in interpreting the world
